--- a/config.env
+++ b/config.env
@@ -18,7 +18,7 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=munch
+CLANG_BRANCH=master
 CLANG_VERSION=r458507
 
 # GCC
